--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb)); */
+  ::-webkit-scrollbar {
+    display: none;
+    }
 }
 
 @layer utilities {
